--- a/module_1/Introduction_to_Linear_Programming.ipynb
+++ b/module_1/Introduction_to_Linear_Programming.ipynb
@@ -17,14 +17,9 @@
     "## Content Table\n",
     "\n",
     "1. [Introduction to Mathematical Models](#introduction-to-mathematical-models)\n",
-    "    - Overview of mathematical modeling in decision making\n",
-    "    - Importance and applications of mathematical models\n",
-    "    - Basic concepts and terminology\n",
-    "\n",
     "2. [Types of Analytics and its Mathematical Models](#types-of-mathematical-models)\n",
-    "    - Descriptive Analytics: Known functional form, unknown variable values\n",
-    "    - Predictive Analytics: Known variable values, unknown functional form\n",
-    "    - Prescriptive Analytics: Known functional form and variable values"
+    "3. [Using Python to PLot Mathematical Models](#using-python-to-plot-mathematical-models)\n",
+    "4. [Example 1: Oak Brewery](#example-1-oak-barrel-brewery)"
    ]
   },
   {
@@ -106,24 +101,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quick Break!\n",
-    "\n",
-    "Did you know? Laughter has been proven to reduce stress and increase focus. So, let's take a moment to lighten the mood with a funny fact:\n",
-    "\n",
-    "**Funny Fact:** Why do programmers prefer dark mode? Because light attracts bugs!\n",
-    "\n",
-    "Now, let's keep up the great work and continue with the rest of the class. Remember, learning is fun! Here's a motivating gif to keep you inspired:\n",
-    "\n",
-    "![Motivational Gif](https://media.giphy.com/media/hrXNZuo6SYYx079zvd/giphy.gif)\n",
-    "\n",
-    "Let's get back to it and dive into the exciting topics ahead. You're doing amazing!\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Types of Analytics and its Mathematical Models\n"
    ]
   },
@@ -161,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimization Formulation"
+    "## Formulation"
    ]
   },
   {
@@ -198,6 +175,32 @@
     "\n",
     "**Forecasting**(Polynomial) \n",
     "$$\\text{Sales} = aX^n + bX^{(n-1)} + \\ldots + kX^2 + mX + c$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quick Break!\n",
+    "\n",
+    "Did you know? Laughter has been proven to reduce stress and increase focus. So, let's take a moment to lighten the mood with a funny fact:\n",
+    "\n",
+    "**Funny Fact:** Why do programmers prefer dark mode? Because light attracts bugs!\n",
+    "\n",
+    "Now, let's keep up the great work and continue with the rest of the class. Remember, learning is fun! Here's a motivating gif to keep you inspired:\n",
+    "\n",
+    "![Motivational Gif](https://media.giphy.com/media/hrXNZuo6SYYx079zvd/giphy.gif)\n",
+    "\n",
+    "Let's get back to it and dive into the exciting topics ahead. You're doing amazing!\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Using Python to Plot Mathematical Models](#using-python-to-plot-mathematical-models)"
    ]
   },
   {
@@ -297,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1: Oak Barrel Brewery\n",
+    "# [Example 1: Oak Barrel Brewery](#example-1-oak-barrel-brewery)\n",
     "\n",
     "In the manufacturing industry, decision-making plays a crucial role in optimizing production processes and maximizing profits. Let's dive into a specific example that illustrates the formulation of a linear optimization problem in the context of a brewery. Imagine a renowned brewery called Oak Barrel, known for producing high-quality ale and beer. \n",
     "\n",
@@ -527,62 +530,10 @@
     "(c) Add a constraint x≤10 \n",
     "\n",
     "<details>\n",
-    "<summary>\n",
-    "Click to show thAnswer\n",
-    "</summary>\n",
+    "<summary>Click to show the Answer</summary>\n",
+    "\n",
     "The additional requirement is a constraint on the value of x, i.e., the amount of ale to produce. Since it requires at least 10 units of x, this implies adding a constraint x≥10.\n",
     "</details>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the CBC MILP Solver \n",
-      "Version: 2.10.3 \n",
-      "Build Date: Dec 15 2019 \n",
-      "\n",
-      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/8c8af0e9267b4b719a753700f6e55bc6-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/8c8af0e9267b4b719a753700f6e55bc6-pulp.sol (default strategy 1)\n",
-      "At line 2 NAME          MODEL\n",
-      "At line 3 ROWS\n",
-      "At line 8 COLUMNS\n",
-      "At line 17 RHS\n",
-      "At line 21 BOUNDS\n",
-      "At line 22 ENDATA\n",
-      "Problem MODEL has 3 rows, 2 columns and 6 elements\n",
-      "Coin0008I MODEL read with 0 errors\n",
-      "Option for timeMode changed from cpu to elapsed\n",
-      "Presolve 3 (0) rows, 2 (0) columns and 6 (0) elements\n",
-      "0  Obj -0 Dual inf 36 (2)\n",
-      "0  Obj -0 Dual inf 36 (2)\n",
-      "2  Obj 800\n",
-      "Optimal - objective value 800\n",
-      "Optimal objective 800 - 2 iterations time 0.002\n",
-      "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
-      "\n",
-      "Optimal Solution:\n",
-      "X = 12.0\n",
-      "Y = 28.0\n",
-      "Total Profit = 800.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "X >= 10, \"Additional_Constraint\"\n",
-    "# Solve the problem\n",
-    "prob.solve()\n",
-    "# Print the optimal solution\n",
-    "print(\"Optimal Solution:\")\n",
-    "print(\"X =\", X.varValue)\n",
-    "print(\"Y =\", Y.varValue)\n",
-    "print(\"Total Profit =\", prob.objective.value())\n",
-    "\n"
    ]
   },
   {
@@ -641,7 +592,7 @@
     "prob += 35*X + 20*Y <= 1190, \"Malt_Constraint\"\n",
     "\n",
     "# Add the additional constraint\n",
-    "prob += X >= 20, \"Additional_Constraint\"\n",
+    "prob += X >= 10, \"Additional_Constraint\"\n",
     "\n",
     "# Solve the problem\n",
     "prob.solve()\n",
