- fixing graphical method part1

--- a/module_1/Graphical_Method.ipynb
+++ b/module_1/Graphical_Method.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -304,11 +306,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The expression 4x + 4y ≤ 160 means that the sum of 4 times the x-value and 4 times the y-value should be less than or equal to 160. This constraint defines an upper limit for the possible combinations of x and y values that satisfy the constraint.\n",
+    "Let's consider the constraint $$4x + 4y \\leq 160$$ and explore a few examples to illustrate how the values below the curve satisfy the constraint.\n",
     "\n",
-    "For example, if we have an x-value of 20, the maximum value for y that satisfies the constraint would be (160 - 4 * 20) / 4 = 30. It ensures that the sum of 4 times x and 4 times y does not exceed 160.\n",
+    "**Example 1:**\n",
+    "Let's take the point $$(x = 10, y = 30)$$. \n",
+    "If we substitute these values into the constraint, we have:\n",
+    "$$4 \\times 10 + 4 \\times 30 = 40 + 120 = 160$$\n",
+    "Since the sum of 4 times x and 4 times y equals 160, this point satisfies the constraint.\n",
     "\n",
-    "In summary, the \"≤\" symbol in the constraint defines an upper limit or boundary for the combination of x and y values, ensuring that their sum is no greater than the specified value."
+    "**Example 2:**\n",
+    "Consider the point $$(x = 20, y = 20)$$. Plugging these values into the constraint, we get:\n",
+    "$$4 \\times 20 + 4 \\times 20 = 80 + 80 = 160$$\n",
+    "Again, the sum of 4 times x and 4 times y is 160, indicating that this point satisfies the constraint.\n",
+    "\n",
+    "**Example 3:**\n",
+    "Now, let's examine the point $$(x = 40, y = 0)$$\n",
+    "Substituting these values into the constraint, we have:\n",
+    "$$4 \\times 40 + 4 \\times 0 = 160 + 0 = 160$$ \n",
+    "\n",
+    "Once again, the sum of 4 times x and 4 times y equals 160, confirming that this point satisfies the constraint.\n",
+    "\n",
+    "In each example, the values of x and y are chosen in such a way that the sum of 4 times x and 4 times y is less than or equal to 160, which satisfies the constraint $$4x + 4y \\leq 160$$ Therefore, all the points below the curve (the line representing the constraint) in the graph would satisfy the constraint.\n",
+    "\n",
+    "It's important to note that these examples are just a few instances that demonstrate how specific values satisfy the constraint. The feasible region consists of all the points below the curve, encompassing an infinite number of possible combinations of x and y values that meet the constraint criteria.\n"
    ]
   },
   {
@@ -352,6 +372,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
