--- a/module_1/Introduction_to_Linear_Programming.ipynb
+++ b/module_1/Introduction_to_Linear_Programming.ipynb
@@ -142,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
     "\n",
     "6. **Formulate the Complete Model**:\n",
     "   - Combining the objective function and constraints, the linear program can be written as:\n",
-    "     Maximize Profit = 13X + 23Y\n",
+    "     Maximize Profit = 13X + 23Y <br>\n",
     "     Subject to:\n",
     "     5X + 15Y ≤ 480\n",
     "     4X + 4Y ≤ 160\n",
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +390,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/f54bc812d0d94de4ba04a41c97faab9b-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/f54bc812d0d94de4ba04a41c97faab9b-pulp.sol (default strategy 1)\n",
+      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/ec759c9e00b0461c87f1abfdfe856fc7-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/ec759c9e00b0461c87f1abfdfe856fc7-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 8 COLUMNS\n",
@@ -406,7 +407,7 @@
       "Optimal - objective value 800\n",
       "Optimal objective 800 - 2 iterations time 0.002\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.02\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
       "\n",
       "Optimal Solution:\n",
       "X = 12.0\n",
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +550,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/371a79df97504933aad385cf53a41540-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/371a79df97504933aad385cf53a41540-pulp.sol (default strategy 1)\n",
+      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/1c95bce661964439b1eee86dd7f99373-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/1c95bce661964439b1eee86dd7f99373-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -560,18 +561,18 @@
       "Coin0008I MODEL read with 0 errors\n",
       "Option for timeMode changed from cpu to elapsed\n",
       "Presolve 3 (-1) rows, 2 (0) columns and 6 (-1) elements\n",
-      "0  Obj 260 Dual inf 35.999998 (2)\n",
-      "1  Obj 720\n",
-      "Optimal - objective value 720\n",
-      "After Postsolve, objective 720, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Optimal objective 720 - 1 iterations time 0.002, Presolve 0.00\n",
+      "0  Obj 130 Dual inf 35.999998 (2)\n",
+      "2  Obj 800\n",
+      "Optimal - objective value 800\n",
+      "After Postsolve, objective 800, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 800 - 2 iterations time 0.002, Presolve 0.00\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
       "\n",
       "Optimal Solution:\n",
-      "X = 20.0\n",
-      "Y = 20.0\n",
-      "Total Profit = 720.0\n"
+      "X = 12.0\n",
+      "Y = 28.0\n",
+      "Total Profit = 800.0\n"
      ]
     }
    ],
