- adding open in collab test

--- a/module_1/Graphical_Method.ipynb
+++ b/module_1/Graphical_Method.ipynb
@@ -5,9 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grapical Method\n",
+    "# Graphical Method\n",
     "\n",
-    "In this section, we will explore different techniques for solving LP problems, with a specific focus on the graphical method and other solvers. Linear programming is a powerful mathematical approach used to optimize objective functions while satisfying a set of linear constraints. By understanding and applying these methods, you'll be equipped to tackle real-world optimization challenges efficiently."
+    "In this section, we will explore different techniques for solving LP problems, with a specific focus on the graphical method and other solvers. Linear programming is a powerful mathematical approach used to optimize objective functions while satisfying a set of linear constraints. By understanding and applying these methods, you'll be equipped to tackle real-world optimization challenges efficiently.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/HesusG/python-decision-making-support-analysis/blob/main/Graphical_Method.ipynb)"
    ]
   },
   {
@@ -370,12 +372,6 @@
     "(b) The feasible region is the set of all values of the decision variables that satisfies all the constraints, but that doesn’t mean that all these values are optimal for the given problem. Only one or some of these values would turn out to be optimal.\n",
     "</details>"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
