--- a/module_1/Graphical_Method.ipynb
+++ b/module_1/Graphical_Method.ipynb
@@ -621,6 +621,9 @@
     "\n",
     "We can visualize the objective function as a series of level curves. Each level curve represents a specific value of the objective function. By plotting these level curves on the graph, we can identify the highest or lowest level curve that touches the feasible region.\n",
     "\n",
+    "\n",
+    "![image_curves](img/problem_1_3.png)\n",
+    "\n",
     "Starting from a lower level curve, we gradually increase or decrease the value of the objective function and observe its intersection with the feasible region. As we move towards higher level curves, we reach a point where the level curve no longer intersects the feasible region. The last intersection point before exiting the feasible region represents the optimal solution.\n",
     "\n",
     "In our case, we would plot the level curves of 13x + 23y = c, where c represents different values of the objective function. We start with a lower value and incrementally increase it until we find the highest level curve that touches the feasible region. The point of intersection between this level curve and the feasible region gives us the optimal solution, which maximizes the total profit.\n",
