--- a/module_1/Problem_1_Luxury_Sofas.ipynb
+++ b/module_1/Problem_1_Luxury_Sofas.ipynb
@@ -85,8 +85,7 @@
     "\n",
     "<details>\n",
     "<summary><strong>Step 5: Consider Hidden Conditions</strong></summary>\n",
-    "    \n",
-    "There are no hidden conditions in this problem.\n",
+    "We can't produce half a couch or bed. In this case only discreate values are valid solutions.\n",
     "</details>\n",
     "\n",
     "<details>\n",
@@ -113,18 +112,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "LpProblem.__init__() got an unexpected keyword argument 'verbose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpulp\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Create the problem variable\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m prob \u001b[39m=\u001b[39m LpProblem(\u001b[39m\"\u001b[39;49m\u001b[39mLuxury_Sofas_Profit_Optimization\u001b[39;49m\u001b[39m\"\u001b[39;49m, LpMaximize, verbose\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Define the decision variables\u001b[39;00m\n\u001b[1;32m      8\u001b[0m couches \u001b[39m=\u001b[39m LpVariable(\u001b[39m\"\u001b[39m\u001b[39mCouches\u001b[39m\u001b[39m\"\u001b[39m, lowBound\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, cat\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mInteger\u001b[39m\u001b[39m'\u001b[39m)  \u001b[39m# Quantity of couches to produce\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: LpProblem.__init__() got an unexpected keyword argument 'verbose'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/d6e641a62bec4cb49d3eb1446c9fb0e3-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/vb/hfzj34dx0zv92bq7vy7zjhyw0000gn/T/d6e641a62bec4cb49d3eb1446c9fb0e3-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 8 COLUMNS\n",
+      "At line 21 RHS\n",
+      "At line 25 BOUNDS\n",
+      "At line 28 ENDATA\n",
+      "Problem MODEL has 3 rows, 2 columns and 6 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Continuous objective value is 66000 - 0.00 seconds\n",
+      "Cgl0004I processed model has 3 rows, 2 columns (2 integer (0 of which binary)) and 6 elements\n",
+      "Cutoff increment increased from 1e-05 to 49.9999\n",
+      "Cbc0012I Integer solution of -66000 found by DiveCoefficient after 0 iterations and 0 nodes (0.02 seconds)\n",
+      "Cbc0001I Search completed - best objective -66000, took 0 iterations and 0 nodes (0.02 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from -66000 to -66000\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                66000.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.00\n",
+      "Time (Wallclock seconds):       0.03\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.03\n",
+      "\n",
+      "Optimal Solution:\n",
+      "Couches = 120.0\n",
+      "Daybeds = 80.0\n",
+      "Total Profit = 66000.0\n"
      ]
     }
    ],
