--- a/module_1/problem_set.ipynb
+++ b/module_1/problem_set.ipynb
@@ -93,7 +93,8 @@
    "source": [
     "## Problem 2\n",
     " A company is interested in developing a fertilizer that contains a minimum of 100 units of potassium, 25 units of nitrogen, and 10 units of ammonia. For this purpose, they have products A and B, which cost 10 and 15 euros per ton in the market, respectively. The content of potassium, nitrogen, and ammonia per ton of product is shown in the following table.\n",
-    "\n"
+    "\n",
+    "Develop the formulation of the new fertilizer taking into consideration that it is desired for the fertilizer to cost as little as possible.\n"
    ]
   },
   {
