--- a/module_1/Introduction_to_Linear_Programming.ipynb
+++ b/module_1/Introduction_to_Linear_Programming.ipynb
@@ -128,8 +128,8 @@
    "source": [
     "| Type                  | Functional Form             | Description                                                         | Values of Independent Variables | Example of Analytics Techniques       |\n",
     "|-----------------------|-----------------------------|---------------------------------------------------------------------|--------------------------------|--------------------------------------|\n",
-    "| Descriptive Analytics | Known functional form       | Summarizes and describes historical data to identify patterns        | Unknown                        | Data visualization, reporting, simulation, queuing       |\n",
-    "| Predictive Analytics  | Unknown functional form     | Forecasts future outcomes based on historical data                   | Known                          | Regression analysis, time series, neural networks     |\n",
+    "| Descriptive Analytics | Known functional form       | Summarizes and describes historical data to identify patterns        | Unknown                        | Data visualization, reporting      |\n",
+    "| Predictive Analytics  | Unknown functional form     | Forecasts future outcomes based on historical data                   | Known                          | Regression analysis, time series, neural networks, simulation, queuing      |\n",
     "| Prescriptive Analytics| Known functional form       | Provides recommendations for optimal decisions or actions           | Known                          | Mathematical optimization, Linear and integer programming|\n"
    ]
   },
