--- a/module_1/problem_set.ipynb
+++ b/module_1/problem_set.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "source": [
     "## Problem 3\n",
-    "A bakery is famous for its two specialties: the imperial cake and the lime cake. The imperial cake requires half a kilogram of sugar and eight eggs, and it is sold for eight dollars. The lime cake requires one kilogram of sugar and eight eggs, and it is sold for ten dollars. In the warehouse, there are only ten kilograms of sugar and one hundred twenty eggs. What combination of these specialties can be made?"
+    "A bakery is famous for its two specialties: the imperial cake and the lime cake. The imperial cake requires half a kilogram of sugar and eight eggs, and it is sold for eight dollars. The lime cake requires one kilogram of sugar and eight eggs, and it is sold for ten dollars. In the warehouse, there are only ten kilograms of sugar and one hundred twenty eggs. What combination of these specialties can be made in order to make the most profits?"
    ]
   },
   {
@@ -133,8 +133,8 @@
    "source": [
     "|            | Sugar (kilogram) | Eggs | Price |\n",
     "|------------|-----------------|------|-------|\n",
-    "| Imperial Cake |      0.5        |   8   |  $ 8   |\n",
-    "| Lime Cake   |        1          |   8   | $ 10  |\n"
+    "| Imperial Cake |      0.5        |   8   |   8   |\n",
+    "| Lime Cake   |        1          |   8   |  10  |\n"
    ]
   },
   {
