--- a/module_2/time_series.ipynb
+++ b/module_2/time_series.ipynb
@@ -1085,6 +1085,14 @@
     "# Show the forecast components\n",
     "model.plot_components(forecast)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The forecasting methodology of Prophet is based on a generalized additive model (GAM) framework, which combines the trend, seasonality, and holiday components in an additive manner. The model fits the data using a Bayesian framework and employs a technique called Markov Chain Monte Carlo (MCMC) to obtain uncertainty intervals for the forecasts."
+   ]
   }
  ],
  "metadata": {
