--- a/module_2/time_series.ipynb
+++ b/module_2/time_series.ipynb
@@ -43,23 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/d3r/Documents/Github/python-decision-making-support-analysis/decision/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "import matplotlib.pyplot as plt\n",
+    "import tqdm as notebook_tqdm\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
